Add run.sh, a convenience wrapper for building and playing
./run.sh builds only when pom.xml or src/main has changed, then execs the
game on a cached dependency classpath. A cold run is ~4.5s, a warm one ~0.4s,
against ~1s of Maven startup on every mvn exec:java.

Editing data/ deliberately does not trigger a rebuild: the game reads the
working tree's data/ first (AGENTS.md §20.1), so content edits apply on the
next run with no compile. That is the payoff of keeping the game data-driven,
and the script should not erode it.

- Unrecognised options pass through to the game, so ./run.sh --scale 3 works;
  --clean, --rebuild, --no-build, --test and --help are the script's own.
- execs the JVM, so exit codes propagate: 0 clean, 2 data error.
- Checks for a JDK 21+ and for mvn only when it actually needs to build.
- Appends to MAVEN_OPTS rather than replacing it, so a developer's own heap
  and locale settings survive; it adds only
  --sun-misc-unsafe-memory-access=allow, which silences the deprecation banner
  Maven 3.9's bundled Guava emits on modern JDKs.
- shellcheck clean.

Also adds slf4j-nop at runtime scope: json-schema-validator pulls slf4j-api,
and with no provider it printed a three-line "no providers were found" banner
on every single run. The game has no logging framework.

pom.xml remains the source of truth and CI still calls Maven directly; §3.2
documents the wrapper and says not to grow build logic in it. §4's file tree
no longer claims there is no run.sh.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PSbq8m8HSR7JNPTz1GJBuf